--- a/actions/templates/actions/vampire_power/power_strip_help.html
+++ b/actions/templates/actions/vampire_power/power_strip_help.html
@@ -1,4 +1,5 @@
-<img src="{{ MEDIA_URL }}/images/theme/switch_off.png" height="88px" width="190px" alt="power strip" />
+{% load dated_static %}
+<img src="{% dated_static 'images/theme/switch_off.png' %}" height="88px" width="190px" alt="power strip" />
 <p>
     Vampires often hang out together. Your television, DVD player, cable box, 
     and video game system may all be plugged into the same power strip. When 
