--- a/actions/templates/actions/vampire_power/smart_power_strip_help.html
+++ b/actions/templates/actions/vampire_power/smart_power_strip_help.html
@@ -1,4 +1,5 @@
-<img src="{{ MEDIA_URL }}/images/theme/smart_strip.png" height="88px" width="190px" alt="power strip" />
+{% load dated_static %}
+<img src="{% dated_static 'images/theme/smart_strip.png' %}" height="88px" width="190px" alt="power strip" />
 <p>
     Looking for a power strip that takes some initiative? Meet the smart power 
     strip. Smart power strips know when it's time to cut power to an outlet. 
