removed the flash message from marking a comment as helpful or not, now the user voted count is updated (or added if not already present) and highlighted for a second and a half [completed: 287]

--- a/templates/comments/list.html
+++ b/templates/comments/list.html
@@ -19,9 +19,12 @@
                     <div class="comment_buttons">
                         {% get_rating_count for comment as users_voted %}
                         {% get_rating_sum for comment as users_helped %}
-                        {% if users_voted %}
-                            {{ users_helped }} of {{ users_voted }} liked this
-                        {% endif %}
+                        <span class="users_voted_stats">
+                            {% if users_voted %}
+                                <span class="users_helped">{{ users_helped }}</span> of
+                                <span class="users_voted">{{ users_voted }}</span> liked this
+                            {% endif %}
+                        </span>
                         {% if user.is_authenticated %}
                             {% get_rating_form for comment %}
                             {% get_flag_form for comment %}
