renamed the records templatetag library file to record, so it doesn't clash with the app name

--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -1,5 +1,5 @@
 {% extends "rah/base.html" %}
-{% load records %}
+{% load record %}
 {% load dated_static %}
 {% block left_sidebar %}
     {% if commitment_list %}
